# RAG-Tutorial

./: .gitignore  app.py  pyproject.toml  requirements.txt
data/text_files/: machine_learning_intro.txt  python_intro.txt
data/vector_store/: chroma.sqlite3
data/vector_store/ae4a7f74-0076-47ef-915b-4ff02f674e45/: index_metadata.pickle
faiss_store/: faiss.index  metadata.pkl
notebook/: document.ipynb
src/: embedding.py  load_documents.py  search.py  vectorstore.py
